# cmake-fun

./: CMakeLists.txt  MyLib.cpp  MyLib.h  build.sh  compile.bat  test-mylib.cpp
